switched to java.util.Base64